--- a/project_dotNet5780_1766_0406/PLWPF/AddGuestRequestWin.xaml
+++ b/project_dotNet5780_1766_0406/PLWPF/AddGuestRequestWin.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PLWPF"
         xmlns:BE="clr-namespace:BE;assembly=BE" x:Class="PLWPF.AddGuestRequestWin"
         mc:Ignorable="d"
-        Title="Add Guest Request" Height="700" Width="400" Loaded="Window_Loaded_1">
+        Title="Add Guest Request" Height="700" Width="400" Loaded="Window_Loaded">
     <Window.Resources>
         <CollectionViewSource x:Key="guestRequestViewSource" d:DesignSource="{d:DesignInstance {x:Type BE:GuestRequest}, CreateList=True}"/>
         <LinearGradientBrush x:Key="ButtonsBrush" EndPoint="0,1" StartPoint="0,0">
