--- a/project_dotNet5780_1766_0406/PLWPF/AddHostWin.xaml
+++ b/project_dotNet5780_1766_0406/PLWPF/AddHostWin.xaml
@@ -197,7 +197,7 @@
                             <TextBlock x:Name="errorMessageDetailsHostingUnit" Grid.Column="1" Grid.Row="0" Text="" Foreground="Red" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" Margin="0,0,0,-19" >
                                 <Button Content="Update Changes" Width="162" Height="22" Click="UpdateHostingUnitButton_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="30,0,0,0"/>
-                                <Button Content="Delete HOsting Unit" Click="DeleteHostingUnitButton_Click" Width="162" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="30,0,0,0"/>
+                                <Button Content="Delete HOsting Unit" Click="DeleteHostingUnitButton_Click" Width="162" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="30,14,0,14"/>
                             </StackPanel>
                             <Grid Grid.Column="1" Grid.Row="1">
                                 <Grid.RowDefinitions>
@@ -208,7 +208,7 @@
                                     <TextBlock  Visibility="Hidden" Text="TextBlock"/>
                                     <TextBlock  Text="Choose hosting Unit:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                     <ComboBox Visibility="Hidden" Width="20"/>
-                                    <ComboBox x:Name="hostingUnitDetails" Width="200" HorizontalAlignment="Center" VerticalAlignment="Center" SelectionChanged="HostingUnitDetails_SelectionChanged"/>
+                                    <ComboBox x:Name="hostingUnitDetails" Width="200" HorizontalAlignment="Center" VerticalAlignment="Center" SelectionChanged="HostingUnitDetails_SelectionChanged" Margin="0,12,0,13"/>
                                 </StackPanel>
                                 <Grid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                                     <Grid.ColumnDefinitions>
